# cli_library

./: CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
app/: main.c  main.h
include/: cli.h  log.h  log_cfg.h  serial_port.h
src/: cli.c  log.c  serial_port.c
